# Electron-Flask-example

./: .gitignore  README.md  app.spec  main.js  package-lock.json  package.json  pyproject.toml
web/: app.py
